Ex 6 & 7; Updates to 1, 2, & 5

--- a/docs/01_development_environment_setup/01_02.md
+++ b/docs/01_development_environment_setup/01_02.md
@@ -7,6 +7,10 @@ parent: 'Exercise 01: Setting up your development environment'
 
 # Task 02 - Fork the repository
 
+## Introduction
+
+Now that you have selected the organization tied to your GitHub Enterprise account you will being working on the lab in a repository associated with the organization. You'll use a repository isolated from other work so you can configure settings exclusively for this lab to try out GitHub Enterprise features. 
+
 ## Description
 
 During this task you will fork the repository for this lab into a new repostory within your GitHub Enterprise organization. 
@@ -17,25 +21,23 @@ During this task you will fork the repository for this lab into a new repostory 
 
 ## Learning Resources
 
-## Key Tasks
+- [Forking a repository](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo)
 
-- Navigate to the repository holding the lab materials
-- Fork the lab repository
+## Key Tasks
 
 ### 01: Navigate to the lab materials repository
 
 Make sure you are logged in to your GitHub account that is connected to the GitHub Enterprise enabled organization.
-
-Navigate to [this GitHub repository](https://github.com/zava-ai-lab/zava-ai-devops-copilot). 
+Navigate to [this GitHub repository](https://github.com/microsoft/TechWorkshop-L300-GitHub-Copilot-and-platform). 
 
 ### 02: Fork the lab repository
 
-You will need to fork the repository in order to associate the repository with your GitHub Enterprise account and settings that will apply to the repository. 
+You will need to fork the repository in order to associate the repository with the organization that you associated with your GitHub Enterprise account. 
 
-Fork [this GitHub repository](https://github.com/zava-ai-lab/zava-ai-devops-copilot) to your account. 
+Fork [this GitHub repository](https://github.com/microsoft/TechWorkshop-L300-GitHub-Copilot-and-platform) to your account. 
 
 <details markdown="block">
-<summary><strong>Expand this section to view the steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
 1. From the lab repository select the **Fork** button.
 
