--- a/docs/01_development_environment_setup/01_03.md
+++ b/docs/01_development_environment_setup/01_03.md
@@ -7,31 +7,37 @@ parent: 'Exercise 01: Setting up your development environment'
 
 # Task 03 - Install necessary software
 
+## Introduction
+
+Before you clone the repository you just forked, you will set up your development environment and install the components that will be needed for this training lab.
+
 ## Description
 
-To work through this training, you will need .NET 6 to support the lab starting point, and .NET 8 to support the target state of the solution. In addition, you will need other tools and extensions for Visual Studio Code in order to complete step in later exercises. In this task you will install the necessary software to complete the work.
+To work through this training lab, you will need .NET 6 to support the lab starting point, and .NET LTS to support the target state of the solution. In addition, you will need other tools and extensions for Visual Studio Code in order to complete step in later exercises. In this task you will install the necessary software to complete the work.
 
 ## Success Criteria
 
-- You have installed .NET 6 and .NET 8
-- You have set up your Visual Studio Code environment with necessary tools and extensions installed
+- You have installed .NET 6 and .NET LTS
+- You have set up your Visual Studio Code environment and installed necessary extensions for this lab
 
 ## Learning Resources
+
+- [.NET versions](https://dotnet.microsoft.com/en-us/download/dotnet)
+- [Azure CLI documentation](https://learn.microsoft.com/en-us/cli/azure/?view=azure-cli-latest)
+- [Installing Git](https://github.com/git-guides/install-git)
+- [Installing Visual Studio Code](https://code.visualstudio.com/download)
 
 
 ## Key Tasks
 
-- Install .NET 6 and .NET 8
-- 
+### 01: Install .NET 6 and .NET LTS
 
-### 01: Install .NET 6 and .NET 8
-
-The lab solution is based on .NET 6 and will later be upgraded to .NET 8. In this step you will install the two SDKs if they are not already on your machine. 
+The lab solution is based on .NET 6 and will later be upgraded to .NET LTS. In this step you will install the two SDKs if they are not already on your machine. 
 
 <details markdown="block">
-<summary><strong>Expand this section to view the detailed steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
-1. .NET 6 SDK
+**1. .NET 6 SDK**
 
 - **macOS**:
    - Download and install from [https://dotnet.microsoft.com/en-us/download/dotnet/6.0](https://dotnet.microsoft.com/en-us/download/dotnet/6.0)
@@ -44,7 +50,9 @@ The lab solution is based on .NET 6 and will later be upgraded to .NET 8. In thi
 - **Linux**:
    - Follow the instructions for your distribution at [https://docs.microsoft.com/en-us/dotnet/core/install/linux](https://docs.microsoft.com/en-us/dotnet/core/install/linux)
 
-2. .NET 8 SDK
+**2. .NET LTS SDK**
+
+Navigate to [https://dotnet.microsoft.com/en-us/download/dotnet](https://dotnet.microsoft.com/en-us/download/dotnet) and select the correct LTS version of .NET to be installed. This task instructs you to install .NET 8 however if .NET 10 is released (for example) you can change the URLs referenced below.
 
 - **macOS**:
    - Download and install from [https://dotnet.microsoft.com/en-us/download/dotnet/8.0](https://dotnet.microsoft.com/en-us/download/dotnet/8.0)
@@ -66,9 +74,9 @@ You will install the following Azure CLI tools:
 - Azure Developer CLI (also known as AZD or azd)
 
 <details markdown="block">
-<summary><strong>Expand this section to view the detailed steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
-1. Azure CLI
+**1. Azure CLI**
 
 - **macOS**:
    ```bash
@@ -83,7 +91,7 @@ You will install the following Azure CLI tools:
       ```
    - For other distros, see [official docs](https://learn.microsoft.com/cli/azure/install-azure-cli)
 
-2. Azure Developer CLI (azd)
+**2. Azure Developer CLI (azd)**
 
 - **macOS**:
    ```bash
@@ -103,7 +111,7 @@ You will install the following Azure CLI tools:
 You will install Git tools to support development tasks.
 
 <details markdown="block">
-<summary><strong>Expand this section to view the detailed steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
 - **macOS**:
    ```bash
@@ -125,7 +133,7 @@ You will install Git tools to support development tasks.
 You will install Visual Studio Code to complete development work for this lab. 
 
 <details markdown="block">
-<summary><strong>Expand this section to view the detailed steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
 - **macOS**:
    - Download and install from [https://code.visualstudio.com/download](https://code.visualstudio.com/download)
@@ -142,11 +150,12 @@ You will install Visual Studio Code to complete development work for this lab.
 
 ### 05 Install Visual Studio Code Extensions
 
-You will install several Visual Studio Code extensions to support this lab:
+You will install several Visual Studio Code extensions to support this lab including: 
 
 - GitHub Copilot
 - GitHub Copilot Chat
 - GitHub Copilot for Azure
+- GitHub MCP Server
 - Azure MCP Server
 - Bicep
 - Docker
@@ -154,8 +163,15 @@ You will install several Visual Studio Code extensions to support this lab:
 <details markdown="block">
 <summary><strong>Expand this section to view the detailed steps</strong></summary>
 
-From Visual Studio Code, select the Extensions tab on the left. Search for the following highlighted extensions and install them:
+1. From Visual Studio Code, select the Extensions tab on the left.
+
+2. Enable the MCP Servers Marketplace. Type `@mcp` in the extensions search and click Enable MCP Servers Marketplace.
+
+![Enable MCP Servers Marketplace](../../media/0103_enable_mcp.png)
+
+ Search for the following highlighted extensions and install them:
 ![VS Code Extensions to install](../../media/0103_extensions.png)
+
 </details>
 
 ### 06 Install Docker Desktop
@@ -163,7 +179,7 @@ From Visual Studio Code, select the Extensions tab on the left. Search for the f
 The solution will be deployed as a container, therefore you will need Docker Desktop installed.
 
 <details markdown="block">
-<summary><strong>Expand this section to view the detailed steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
 Follow the links below to install docker desktop:
 
