--- a/docs/05_integrate_github_copilot_for_developer_productivity/05_01.md
+++ b/docs/05_integrate_github_copilot_for_developer_productivity/05_01.md
@@ -17,7 +17,7 @@ You can create issues using GitHub Copilot directly in GitHub online, or from Vi
 
 ## Success Criteria
 
-- You have created a new issue using GitHub Copilot in Visual Studio Code
+- You have created a new issue using GitHub Copilot in Visual Studio Code.
 
 ## Learning Resources
 
