--- a/docs/01_development_environment_setup/01_01.md
+++ b/docs/01_development_environment_setup/01_01.md
@@ -7,6 +7,10 @@ parent: 'Exercise 01: Setting up your development environment'
 
 # Task 01 - Enable GitHub Enterprise
 
+## Introduction
+
+Before you can take advantage of security features of GitHub Advanced Security, you will need a GitHub organization tied to GitHub Enterprise. You can enable a 30 day trial that will give you access to these features for the purposes of this training lab. 
+
 ## Description
 
 During this task you will set up GitHub Enterprise for your organization. In a later exercise we will configure GitHub Advanced Security (GHAS).
@@ -17,29 +21,47 @@ During this task you will set up GitHub Enterprise for your organization. In a l
 
 ## Learning Resources
 
+- [GitHub Enterprise trial information](https://docs.github.com/en/enterprise-cloud@latest/enterprise-onboarding/getting-started-with-your-enterprise/setting-up-a-trial-of-github-enterprise)
 - [Setting up GitHub Enterprise](https://github.com/account/enterprises/new)
 
 ## Key Tasks
-
-- Login to your GitHub account
-- Set up a GitHub Enterprise account and connect it to your organization
 
 ### 01: Login to your GitHub account
 
 Before you setup GitHub Enterprise, choose the GitHub account you would like to connect to GitHub Enterprise and login to that account.
 
+### 02: Select or create an organization
+
+You will need an organization to associate your GitHub Enterprise account with. 
+
+Review your organizations and determine which organization you would like to associate, otherwise, create a new organization for this lab. 
+
+<details markdown="block">
+<summary><strong>Expand this section for detailed steps</strong></summary>
+
+1. From your GitHub account select Manage Organizations.
+2. If you do not see an organization you'd like to associate with a GitHub Enterprise account, select New organization.
+3. Choose the Free plan for the organization plan. Select Create a free organization.
+4. Fill out the form. Consider using the name `Zava Labs <your-github-account-name>` to ensure it is unique. Click Next.
+
+![New organization details](../../media/0101_new_org.png)
+
+5. If you don't plan to add other members, select Complete setup.
+
+</details>
+
 ### 02: Enable GitHub Enterprise 
+
+Sign up for a GitHub Enterprise account at https://github.com/account/enterprises/new, and associate the organization. 
 
 If you will not be using an organization in your GitHub account that already has GitHub Enterprise, you should choose an organization for which you have authority to add GitHub Enterprise. 
 
-Sign up for a GitHub Enterprise account and associate the organization. 
-
-> **NOTE** You will be asked to provide billing information for the GitHub Enterprise 30 day trial during this lab, however, you will be able to remove this setup during the resource cleanup exercise. 
+> **NOTE** You will be asked to provide billing information for the GitHub Enterprise 30 day trial during this lab, however, you will be able to remove this setup during the final resource cleanup exercise. 
 
 <details markdown="block">
-<summary><strong>Expand this section to view the steps to complete</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
-1. Sign up for a GitHub Enterprise account
+**1. Sign up for a GitHub Enterprise account**
 
 Navigate to: https://github.com/account/enterprises/new to arrive to the signup for GitHub Enterprise. 
 
@@ -47,13 +69,14 @@ Navigate to: https://github.com/account/enterprises/new to arrive to the signup 
 
 If you are not working in a corporate GitHub account, choose "Get started with personal accounts". 
 
-2. Create your enterprise
+**2. Create your enterprise**
 
-Enter the name of your enterprise and choose the GitHub organization to connect to. Fill out the remaining details on the form and select "Create enterprise". 
+Enter the name of your enterprise and choose the GitHub organization to connect to. Consider naming the enterprise `Zava Labs Enterprise <your-github-account-name>` to ensure uniqueness. 
+
+Fill out the remaining details on the form and select "Create enterprise". 
 
 ![GitHub Enterprise Sign Up Details](../../media/0101_GHE_signup2.png)
 
-3. Navigate to your enterprise at 
-`https://github.com/enterprises/<your enterprise name>` and select "Billing and licenseing" from the menu. Fill out your billing details for the 30 day trial in order to enable the features necessary for this lab. 
+3. The next step will ask you to confirm billing and licensing infomation. Fill out your billing details for the 30 day trial in order to enable the features necessary for this lab. 
 
 </details>
