--- a/docs/01_development_environment_setup/01_04.md
+++ b/docs/01_development_environment_setup/01_04.md
@@ -7,6 +7,10 @@ parent: 'Exercise 01: Setting up your development environment'
 
 # Task 04 - Build the solution
 
+## Introduction
+
+Now that Visual Studio Code and your development tools are setup, you can begin working on the lab. First you will need to clone the forked repository and verify the starting point of the solution.
+
 ## Description
 
 During this task you will clone the repository you forked, and build the solution to ensure you have a baseline for the next exercises.
@@ -27,11 +31,16 @@ During this task you will clone the repository you forked, and build the solutio
 Clone the repository you forked on your local machine. You can do this using the following command:
 
 ```bash
-git clone https://github.com/<your-username>/<your-forked-repository>.git
+git clone https://github.com/<your-username>/<your-fork-name>.git
 ```
 
-Make sure to replace `<your-username>` with your actual GitHub username, and `<your-forked-repository-name>` with the repository name where you forked the code.
+Make sure to replace `<your-username>` with your actual GitHub username, and `<your-fork-name>` with the repository name where you forked the code.
 
+You can optionally shorten the folder name by following this command with a folder name such as `ZavaLabFork`.
+
+```bash
+git clone https://github.com/<your-username>/<your-fork-name>.git ZavaLabFork
+```
 
 ### 02: Build and run the solution locally
 
@@ -40,34 +49,46 @@ From Visual Studio Code, you will build and run the current .NET 6 version of th
 ![Zava Storefront UI](../../media/0104_ui.png)
 
 <details markdown="block">
-<summary><strong>Expand this section to view the detailed steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
 #### Steps to build and run the solution (.NET 6)
 
-1. **Open the project in Visual Studio Code**
-   - Launch VS Code and open the folder containing your cloned repository.
+**1. Open the project in Visual Studio Code**
 
-2. **Restore dependencies**
-   - Open a terminal in VS Code and run:
-     ```bash
-     dotnet restore
-     ```
+Launch VS Code and open the folder containing your cloned repository.
 
-3. **Build the solution**
-   - Run:
-     ```bash
-     dotnet build
-     ```
+**2. Restore dependencies**
 
-4. **Run the application**
-   - Run:
-     ```bash
-     dotnet run --project src/ZavaStorefront.csproj
-     ```
-   - This will start the web application. The terminal will display the local URL (e.g., `http://localhost:5000` or similar).
+Open a terminal in VS Code and navigate to the `src` folder. From there, restore the solution:
 
-5. **Open the application in your browser**
-   - Navigate to the displayed local URL to view and interact with the running solution.
+```bash
+cd src
+dotnet restore
+```
+
+**3. Build the solution**
+
+To build the solution run the following command:
+   
+```bash
+dotnet build
+```
+
+> **NOTE** Ignore any warnings you see in the output window. These will be addressed with the later .NET upgrade.
+
+**4. Run the application**
+
+Run the application from the command line:
+
+```bash
+dotnet run --project src/ZavaStorefront.csproj
+```
+
+This will start the web application. Review the terminal output to find the local URL (e.g., `http://localhost:5000` or similar).
+
+**5. Open the application in your browser**
+
+Navigate to the local URL to view and interact with the running solution.
 
 > **NOTE** If you encounter any issues, verify that .NET 6 is installed and your dependencies are restored. For troubleshooting, consult the official [.NET documentation](https://docs.microsoft.com/en-us/dotnet/core/get-started).
 
