--- a/docs/02_implement_infrastructure_with_copilot/02_01.md
+++ b/docs/02_implement_infrastructure_with_copilot/02_01.md
@@ -7,19 +7,31 @@ parent: 'Exercise 02: Implement Infrastructure with Copilot'
 
 # Task 01 - Create an infrastructure Issue in GitHub 
 
+## Introduction
+
+You will be deploying the Zava Storefront solution to Azure as part of this training lab. To prepare the infrastructure you will begin by creating issues and generating code from those issues to create the necessary resources. 
+
 ## Description
 
-During this task you will create a GitHub issue using Chat with Copilot. This issue will be later used to generate a Bicep script to produce the necessary Azure resources for next steps in this lab.
+During this task you will create a GitHub issue using Chat with Copilot. This issue will be later used to generate a Bicep script to produce the necessary Azure resources for this training lab.
 
 ## Success Criteria
 
-- You have generated an issue in GitHub
+- You have generated an issue with GitHub Copilot
 
 ## Learning Resources
 
+- [Creating issues with GitHub Copilot](https://docs.github.com/en/copilot/how-tos/use-copilot-for-common-tasks/use-copilot-to-create-or-update-issues)
+
 ## Key Tasks
 
-### 01: Open Chat with Copilot
+### 01: Verify issues are enabled
+
+Your new repository must have the Issues feature enabled. Navigate to your forked repository and select the Settings tab. Check that the Issues feature is selected, and if not, select it.
+
+![Issues feature selection](../../media/0201_issues.png)
+
+### 02: Open Chat with Copilot
 
 Navigate to your forked repository for this lab at GitHub and select Chat with Copilot from the top menu:
 
@@ -29,7 +41,7 @@ Confirm that you have the correct repository context. If you started from the re
 
 ![Chat with Copilot dialog](../../media/0201_chatcopilot_2.png)
 
-### 02: Create the issue
+### 03: Create the issue
 
 You will prompt to create the GitHub issue that describes the following infrastructure requirements: 
 - Deploying the ZavaStorefront web application in a Docker container to a Linux-based app service
@@ -37,17 +49,73 @@ You will prompt to create the GitHub issue that describes the following infrastr
 - You will ask for Application Insights to be enabled, and choose a region (such as West US 3)
 
 <details markdown="block">
-<summary><strong>Expand this section to view detailed steps</strong></summary>
+<summary><strong>Expand this section for detailed steps</strong></summary>
 
-From Chat with Copilot enter the following prompt to create an issue: 
+1. From Chat with Copilot enter the following prompt to create an issue: 
 
 ```bash
 /create-issue Provision Azure infrastructure for the ZavaStorefront web application. It will need a Linux App Service, and I want to use Docker to deploy to the App Service, so I'll need a Container Registry as well. But I don't want to install docker on my local machine. The AppService should use Azure RBAC to pull images not passwords. I want to monitor it with Application Insights. I will be using GPT-4 and Phi so I will need Azure AI Foundry, I want to use westus3 because they are available there. Everything should be deployed together in one resource group in the same region. This is a dev environment and I want to use AZD with Bicep to define and deploy everything.
 ```
-The end result should be that GitHub Copilot creates an issue that looks similar to the following: 
+
+2. The end result should be that GitHub Copilot creates an issue that looks similar to the following: 
 
 ![Copilot input](../../media/0201_chatcopilot_input.png)
+
 ![Copilot response](../../media/0201_chatcopilot_output.png)
+
+3. Click Create to create the issue.
+
+4. Navigate to your repository and select the Issues tab to view the issue is created.
+
+![Issues](../../media/0201_new_issue.png)
 
 </details>
 
+<details markdown="block">
+<summary><strong>Expand this section for a complete Issue text</strong></summary>
+
+If you are not having success with completing lab steps for this issue, try copying this completed text into your issue in order to proceed with the training lab.
+
+```text
+## Summary
+Provision all Azure resources as infrastructure for the ZavaStorefront web application (dev environment) into a single resource group in westus3. Use Bicep files and AZD to define and deploy all resources together. Application to be deployed as a Docker container to Linux App Service (Web App for Containers), without requiring local Docker. App Service will pull images from Azure Container Registry (ACR) using Azure RBAC and managed identity (no password secrets). The application will be monitored using Application Insights. Azure AI Foundry will also be provisioned for GPT-4 and Phi access in westus3 as these models are available there.
+
+## Requirements
+- All resources provisioned into a single resource group (e.g. `rg-zavastore-dev-westus3`) in westus3
+- Azure Container Registry (ACR) for container images (SKU: Basic/Standard)
+- Linux App Service (Web App for Containers) configured to pull images from ACR
+- System-assigned managed identity for Web App, with AcrPull role assignment to ACR
+- No password-based pulls from ACR
+- Application Insights instance linked for monitoring
+- Azure AI Foundry resource provisioned in westus3
+- All resources defined in Bicep templates and provisioned with AZD
+- No local Docker required: Image builds/pushes use az acr build or GitHub Actions (run in cloud)
+- Minimal-cost SKUs appropriate for dev
+
+## Implementation Guidance
+- Use modular Bicep structure (`infra/` folder with modules for ACR, App Service Plan, Web App, App Insights, AI Foundry, and role assignments)
+- Parameterize resource names, region, environment, SKUs in Bicep
+- `azd.yaml` and README should document full deployment/dev workflow
+- CI workflow examples for image build/push without local Docker (cloud builds)
+- Role assignment in Bicep: Assign `AcrPull` on ACR to App Service managed identity
+- Application Insights: Connect via instrumentation key/app settings
+- AI Foundry: Use dev-appropriate SKUs; ensure region supports requested models
+
+## Checklist
+- [ ] Confirm region and subscription quotas for AI Foundry in westus3
+- [ ] Bicep modules for ACR, App Service, App Insights, Role Assignment, AI Foundry
+- [ ] Main Bicep template (calls modules)
+- [ ] azd.yaml script (maps provision/deploy workflow)
+- [ ] GitHub Actions workflow for ACR build (cloud-side or hosted runner)
+- [ ] AcrPull role assignment (managed identity)
+- [ ] App Insights wiring
+- [ ] AI Foundry deployment and configuration
+- [ ] README.md with workflow/cost notes
+- [ ] Smoke test: app deploy/monitoring/AI access
+
+---
+If you need code/starter templates for Bicep or CI workflow, request below.
+
+```
+
+</details>
