--- a/docs/02_implement_infrastructure_with_copilot/02_02.md
+++ b/docs/02_implement_infrastructure_with_copilot/02_02.md
@@ -1,11 +1,15 @@
 ---
-title: '2. Create Bicep Scripts in VSCode'
+title: '2. Create Bicep Scripts in Visual Studio Code'
 layout: default
 nav_order: 2
 parent: 'Exercise 02: Implement Infrastructure with Copilot'
 ---
 
-# Task 02 - Create Bicep Scripts in VSCode 
+# Task 02 - Create Bicep Scripts in Visual Studio Code 
+
+## Introduction
+
+Now that you have created an issue for implementing the necessary infrastructure to deploy the solution, you can use GitHub Copilot to generate scripts that will be used for the deployment. 
 
 ## Description
 
@@ -22,13 +26,15 @@ Use GitHub Copilot Chat (with GitHub MCP and Azure MCP) to plan, design, and dep
 
 ## Learning Resources
 
+- [Azure CLI Reference](https://learn.microsoft.com/en-us/azure/developer/azure-developer-cli/reference)
+
 ## Key Tasks
 
-### 01: Create Infrastructure scripts in VS Code using GitHub Copilot
+### 01: Create Infrastructure scripts in Visual Studio Code using GitHub Copilot
 
-1. Go to Visual Studio code where you have the solution folder open 
+1. Go to Visual Studio code where you have the solution folder open.
 
-2. Create a working branch 
+2. Create a working branch
 
     From the command line in Visual Studio Code type the following:
 
@@ -37,11 +43,10 @@ Use GitHub Copilot Chat (with GitHub MCP and Azure MCP) to plan, design, and dep
     ```
 
 3. Launch Copilot Chat and confirm workspace context
+ 
+    ![Copilot context](../../media/0202_copilot_context.png)
 
-    ![alt text](../../media/0202_image-2.png)
-
-
-1. Prompt Copilot to generate the script
+4. Prompt Copilot to generate the script
 
     From Copilot type the following to reference the repository issue created earlier. Replace <issue-number> with the number assigned to the issue you created.
 
